<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nito\'s Umbrella</string>
    <string name="title_section1">Main Menu</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="powered_by">Powered by Nito\'s Umbrella</string>
    <string name="about_hvz">Humans vs. Zombies is a game played around the world on college campuses, at libraries, and in other public settings.
    It pits teams of humans against a team of zombies that grows as then humans are conquered. They must defend themselves with simple weapons
    like nerf guns and socks, while the zombies are limited to a glorified game of tag. Over the course of a week, who will survive the outbreak?</string>
    <string name="aboutus">Nito\'s Umbrella is a support system designed to bring minor elements of augmented reality to team based games in the real world.
    The project began as an endeavor by four students at Florida State University.</string>
    <string name="the_rules"> Work in Progress </string>
    <string name="games">This is where a list of past games will be viewable. \n \n Info will be pulled from website.</string>
    <string name="safe_zones">Safe zones are areas in which players cannot be tagged.\n \nThese include:\n\n• All school buildings\n• Dorms\n• Parking Garages\n \nDart blasters may not be used within safe zones. Any shots fired inside of or out of safe zones do not count.\n \n• While in safe zones, dart blasters must be concealed at all times.\n• Stuns in safe zones can only be made with socks thrown in a manner that does not violate any other rules (especially the Golden Rule).\n• The Union is a safe zone from 6am-6pm under any overhang and in the main Union courtyard, including the small courtyard by the post office.\n• A player must have two feet inside the doorway of a safe zone in order to be considered safe. \n</string>
    <string name="no_play">No-play zones are areas in which game-play does not occur. \n \nThese include: \n• Classrooms (whether they be indoor or outdoor) while class is in session.\n• Events sponsored by SGA, Campus Recreation, and Union Productions.\n• Libraries\n• Balcony of HCB\n\nLike safe zones, in no-play zones dart blasters must be concealed at all times.\nNo tags or stuns may occur in no-play zones (even with socks).\nPlayers may not communicate with active players while they are inside a no-play zone.\n</string>
    <string name="cbounds">The game takes place on campus within these streets:\n\n• Jefferson\n• Copeland\n• Tennessee\n• Stadium\n\nThe sidewalks touching these streets are no-play zones.\n</string>
    <string name="human_rules">FSU HvZ bandanas must be worn on the upper arm at all times while on campus (including safe zones). A human player that is not wearing a bandanna may still be tagged if recognized by a zombie player, unless that player is in a no-play zone or safe zone. Bandanas may be removed in no-play zones.\n\nThe supplied 3x5 index card with your name and player ID(or this app with an HvZID) must be carried at all times. Moderators WILL randomly check for identification.\n\nIf a moderator asks you for identification, you must provide it. Failure to do so will result in a yellow card.\n\nHumans may stun zombies in the following ways:\n\n•\tFiring an approved dart blaster or blowgun (see Safety Rules)\n• Throwing a sock.\n\nOnce tagged, human players must remove their armband and get rid of their blaster or socks.\n</string>
    <string name="zombie_rules">FSU HvZ bandanas must be worn on the head at all times while on campus (including safe zones). A zombie player that is not wearing a bandanna may still be stunned if recognized by a human player. Bandannas may be removed in no-play zones.\n\nA stunned zombie must completely remove their bandanna from their body.\n\nIf a zombie is stunned during the day their stun timers are automatically 10 minutes. After they remove their bandana they may continue to walk around ONLY to continue walking to class or other destination. Zombies may not follow humans or contact other zombies until their stun timer is up.\n\nIf a player is not logged as a zombie on hvzatfsu.com within 3 hours of being tagged, they may return to playing as a human.\n\nIf a player makes any tags, they forfeit their ability to return to the human team.\n\nZombies may collect darts if there are no humans collecting darts in the area.\n\nZombies may not carry or use blasters or socks.\n</string>
    <string name="original_zombie">Fair rules for original zombies will be decided on by moderators and revealed to the OZ\'s on a game-to-game basis.\n\nOriginal Zombies CAN masquerade as humans.\n\nOZ\'s can wear a bandanna as an armband or headband, but must wear a bandanna.\n\nOZ\'s can be stunned in the same manner as any normal zombie.\n</string>
    <string name="safety">Blasters must be concealed while indoors (do not use garbage bags to do so).\n\nNo military or paramilitary patches, symbols or insignias may be worn.\n\nNo full camouflage outfits (fatigues, hunting gear, ghillie suits, etc.) may be worn.\n\nOnly one article of camouflage clothing may be worn.\n\nNo face coverings or helmets (including costumes with masks) may be worn.\n\nPremade Tactical gear may not be worn during the day.\n\nPlayers may not impede pedestrian traffic at any point.\n\nIn addition to our rules, we abide by campus rules at all times.\n</string>
    <string name="trees">Players may use trees.\n\nZombies and humans must have both feet planted firmly in the tree to get a tag or stun a zombie.\n</string>
    <string name="vehicles">Players are considered out of the game while using vehicles and cannot be stunned or tagged. After exiting or dismounting a vehicle, zombies are stunned for the regular 2 minutes, and must remove their headband. Humans can use vehicles in order to get to class. If a human shows up to a checkpoint or mission on a vehicle, you will not receive attendance for that mission. Any players found violating this rule will receive a red card.\n\nVehicles include:\n\n•\tAutomobiles\n•Skateboards\n•Bicycles\n•Longboards\n•Any other form of transportation\n</string>
    <string name="Blowguns">Streamlines, whistler darts, and Velcro guns with the Velcro removed are the only darts allowed with blowguns.\n\nIf a player uses a blowgun in a manner deemed unsafe, the offending player will be yellow carded and they will be banned from using blowguns. This includes but is not limited to aiming for the head.\n</string>
    <string name="ModBlasters">Dart Blasters may be modified. However, they may not be able to leave a mark when fired at point blank range. Mods will randomly check guns during the game.\n\nDart blasters may not be made to look realistic in any way. This includes painting the gun with camo, dark colors, or metallic colors.\n\nAll dart blasters must have orange tips. This is a federal law.\n\nModerators have the final say as to which blasters are allowed and which are not.\n</string>
    <string name="ModDarts">The only modifications that may be made to darts are marking them (no profanity), taping them, and removing the Velcro from tagger darts.\n</string>
    <string name="ModSocks">Socks may be marked with the player\'s name.\n</string>
    <string name="MissionRules">No player may enter a safe zone during a mission. If any player (zombie or human) enters a safe zone during a mission without moderator approval, they can no longer participate in the night\'s mission.\n\nNo player may use a vehicle during a mission.\n\nTags made during missions must be logged before 2am, which is 3 hours from the end of mission time.\n\nIf any player wants to enter a building during a mission to get water, they must get permission from the nearest moderator.\n\nZombies who are stunned during mission times must remove their bandannas, stay in place, and kneel.\n\n“Double-Tapping” zombies allows a zombie to get up and walk a short distance away from a human group. The zombie may not follow humans or contact any other zombies until their original stun time is over.\n\nOne piece of premade tactical gear may be worn during missions. Tactical gear includes holsters, vests, bags, etc.\n\nWe adhere to all city and campus rules: \n\nThere will be no consumption of alcohol or drugs during the time of missions. This offense will result in an immediate red card and you will be asked not to continue mission.\n( http://healthycampus.fsu.edu/Alcohol/FSU-Alcohol-Policy )\n</string>
    <string name="CardSystem">Breaking any of these rules will result in a yellow card.\n\nA player will receive a red card for a severe offence or after receiving two yellow cards.\n\nA red card means you are banned from the current game.\n\nA player who receives a red card will automatically begin the next game with a yellow card.\n\nIf a player receives two red cards, they will then receive a blue card and will be banned from the game permanently.\n</string>
    <string name="FinalRule">Moderators have final say in any dispute during gameplay. Moderators may change these rules at any time to improve gameplay.</string>
    <string name="title_activity_login">LoginActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="colors_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
